syntax = "proto3";

package user;

service UserService {
    rpc listUser (UserRequest) returns (stream UserResponse) {};
}

message User {
    string first_name = 1;
    string last_name = 2;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    string result = 1;
}